--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,8 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "dev": "node index.js"
+    "dev": "node index.js",
+    "start": "pm2 start index.js --name \"socket-backend\""
   },
   "dependencies": {
     "cors": "^2.8.5",
