--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "lucide-react": "^0.575.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^7.13.1",
     "socket.io-client": "^4.7.5"
   },
   "devDependencies": {
