--- a/server/package.json
+++ b/server/package.json
@@ -9,7 +9,9 @@
   },
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^17.3.1",
     "express": "^4.19.2",
+    "openai": "^6.25.0",
     "socket.io": "^4.7.5"
   }
 }
