--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,40 @@
+# Dependencies
 node_modules
-package-lock.json
+.pnp
+.pnp.js
+
+# Testing
+coverage
+
+# Production
+build
+dist
 client/dist
+
+# Misc
 .DS_Store
-client/dist
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+*.local
+
+# Logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Lock files
+package-lock.json
+yarn.lock
+*lock*
+
+# Editor
+.vscode
+.idea
+*.swp
+*.swo
+
+# Server env
+server/.env
