--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "node index.js",
-    "start": "pm2 start index.js --name \"socket-backend\""
+    "start": "pm2 start index.js --name \"socket-backend\"",
+    "test": "vitest"
   },
   "dependencies": {
     "cors": "^2.8.5",
@@ -13,5 +14,8 @@
     "express": "^4.19.2",
     "openai": "^6.25.0",
     "socket.io": "^4.7.5"
+  },
+  "devDependencies": {
+    "vitest": "^4.0.18"
   }
 }
