--- a/client/package.json
+++ b/client/package.json
@@ -10,9 +10,12 @@
   },
   "dependencies": {
     "crypto-js": "^4.2.0",
+    "i18next": "^25.8.13",
+    "i18next-browser-languagedetector": "^8.2.1",
     "lucide-react": "^0.575.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-i18next": "^16.5.4",
     "react-router-dom": "^7.13.1",
     "socket.io-client": "^4.7.5"
   },
